[gd_scene load_steps=3 format=3 uid="uid://c6qn2v8r4pxkt"]

[ext_resource type="Script" path="res://scripts/tablet/tablet_controller.gd" id="1_tablet_controller"]
[ext_resource type="Script" path="res://scripts/tablet/websocket_client.gd" id="2_ws_client"]

[node name="TabletMain" type="Node"]
script = ExtResource("1_tablet_controller")

[node name="WebSocketClient" type="Node" parent="."]
script = ExtResource("2_ws_client")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.15, 0.15, 0.2, 1)

[node name="SceneContainer" type="Node" parent="."]

[node name="ConnectionUI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Background" type="ColorRect" parent="ConnectionUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.15, 1)

[node name="VBox" type="VBoxContainer" parent="ConnectionUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Title" type="Label" parent="ConnectionUI/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Tomtens FÃ¶rsvunna Minnen"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="ConnectionUI/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "[SWEDISH: Tablet Controller]"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="ConnectionUI/VBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Label" type="Label" parent="ConnectionUI/VBox"]
layout_mode = 2
text = "[SWEDISH: Enter server address:]"
horizontal_alignment = 1

[node name="IPInput" type="LineEdit" parent="ConnectionUI/VBox"]
layout_mode = 2
placeholder_text = "ws://192.168.1.100:8765"
alignment = 1

[node name="ConnectButton" type="Button" parent="ConnectionUI/VBox"]
layout_mode = 2
text = "[SWEDISH: Connect]"

[node name="StatusLabel" type="Label" parent="ConnectionUI/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
horizontal_alignment = 1
autowrap_mode = 2
